--- a/.github/workflows/android-cj.yml
+++ b/.github/workflows/android-cj.yml
@@ -6,73 +6,50 @@ on:
   pull_request:
     branches: [ "*" ]
 jobs:
+  # This workflow contains a single job called "build"
   build:
+
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    
+    - name: set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
 
-      - name: Setup JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: "zulu"
-          java-version: 11
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    - name: Create google-services
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}' > ./app/google-services.json
+      
+    # Build Debug App
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
+      
+    # Run unit test
+    - name: Run unit test
+      run: ./gradlew testdebugUnitTest
+      
+    - name: IA Android CI Discord Notification
+      uses: sarisia/actions-status-discord@v1
+      if: ${{ success() }}
+      with:
+        title: ✅ Idea Archieve Android CI success ✅
+        webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
+        color: 00FF00
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/buildSrc/**/*.kt') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Decrypt secrets.tar.gpg
-        run: gpg --quiet --batch --yes --always-trust --decrypt --passphrase="$SECRET_GPG_PASSWORD" --output secrets.tar secrets.tar.gpg
-        env:
-          SECRET_GPG_PASSWORD: ${{ secrets.SECRET_GPG_PASSWORD }}
-
-      - name: Unzip secrets.tar
-        run: tar xvf secrets.tar
-
-      - name: Run ktlint
-        run: ./gradlew ktlintCheck
-
-      - name: Run detekt
-        run: ./gradlew detekt
-
-      - name: Run unit tests
-        run: ./gradlew testDebugUnitTest
-
-      - name: Build assemble release apk
-        run: ./gradlew assembleRelease
-
-      - name: Create android test report
-        uses: asadmansr/android-test-report-action@v1.2.0
-        if: ${{ always() }}
-
-      - name: Build assemble release apk
-        run: ./gradlew assembleRelease
-
-      - name: IA Android CI Discord Notification
-        uses: sarisia/actions-status-discord@v1
-        if: ${{ success() }}
-        with:
-          title: ✅ Idea Archieve Android CI success ✅
-          webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
-          color: 00FF00
-
-      - name: IA Android CI Discord Notification
-        uses: sarisia/actions-status-discord@v1
-        if: ${{ failure() }}
-        with:
-          title: ❗️ Idea Archieve Android CI failed ❗️
-          webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
-          color: FF0000
+    - name: IA Android CI Discord Notification
+      uses: sarisia/actions-status-discord@v1
+      if: ${{ failure() }}
+      with:
+        title: ❗️ Idea Archieve Android CI failed ❗️
+        webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
+        color: FF0000
