--- a/.github/workflows/android-cj.yml
+++ b/.github/workflows/android-cj.yml
@@ -1,51 +1,60 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "develop" ]
   pull_request:
-    branches: [ "*" ]
+    branches: [ "develop" ]
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: "zulu"
+          java-version: 11
 
- 
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Cache Gradle Packages
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{runner.os}}-gradle-${{hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/buildSrc/**/*.kt')}}
+          restore-keys: |
+            ${{runner.os}}-gradle-
+
+      - name: Run ktlint
+        run: ./gradlew ktlintCheck
+
+      - name: Run Lint
+        run: ./gradlew lint
+
+      - name: Build with Gradle
+        run: ./gradlew build
       
-    - name: Run unit test
-      run: ./gradlew testdebugUnitTest
-      
-    - name: IA Android CI Discord Notification
-      uses: sarisia/actions-status-discord@v1
-      if: ${{ success() }}
-      with:
-        title: ✅ Idea Archieve Android CI success ✅
-        webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
-        color: 00FF00
+      - name: IA Android CI Discord Notification
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ success() }}
+        with:
+          title: ✅ Idea Archieve Android CI success ✅
+          webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
+          color: 00FF00
 
-    - name: IA Android CI Discord Notification
-      uses: sarisia/actions-status-discord@v1
-      if: ${{ failure() }}
-      with:
-        title: ❗️ Idea Archieve Android CI failed ❗️
-        webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
-        color: FF0000
+      - name: IA Android CI Discord Notification
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ failure() }}
+        with:
+          title: ❗️ Idea Archieve Android CI failed ❗️
+          webhook: ${{ secrets.ANDROID_DISCORD_WEBHOOK }}
+          color: FF0000
