--- a/.github/workflows/android-cj.yml
+++ b/.github/workflows/android-cj.yml
@@ -1,8 +1,11 @@
 name: Android CI
 
 on:
+  push:
+    branches: [ "master" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "*" ]
+
 
 jobs:
   build:
