:green_heart: add LOCAL_PROPERTIES to ci script

--- a/.github/workflows/android-cj.yml
+++ b/.github/workflows/android-cj.yml
@@ -45,6 +45,9 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+
+      - name: Create LOCAL_PROPERTIES
+        run: echo '${{ secrets.LOCAL_PROPERTIES }}' > ./local.properties
       
       - name: IA Android CI Discord Notification
         uses: sarisia/actions-status-discord@v1
