--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -18,11 +18,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
@@ -34,7 +33,7 @@
 
                 <data
                     android:host="oauth"
-                    android:scheme="kakao736c8c9c3716a1d7c8ebfb9d3f8ba5b2" />
+                    android:scheme="736c8c9c3716a1d7c8ebfb9d3f8ba5b2" />
             </intent-filter>
 
             <intent-filter>
@@ -48,6 +47,7 @@
                     android:scheme="test" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false"/>
