기능 테스트 전 커밋

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false"/>
+        <activity android:name=".ui.main.SignUpActivity"
+            android:exported="false"/>
+        <activity android:name=".ui.main.AuthCodeInputActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
