fragment 코드로 리펙토링

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false"/>
-        <activity android:name=".ui.main.SignUpActivity"
+        <activity android:name=".ui.main.SignUpFragment"
             android:exported="false"/>
         <activity
             android:name=".ui.profile.EditProfileActivity"
@@ -66,6 +66,7 @@
             android:name=".ui.profile.WithdrawalActivity"
             android:exported="false" />
         <activity android:name=".ui.main.AuthenticationSuccessActivity"
+        <activity android:name=".ui.main.SignUpActivity"
             android:exported="false"/>
 
         <activity android:name=".ui.main.AuthenticationFailedActivity"
