--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         <activity
             android:name=".ui.profile.WithdrawalActivity"
             android:exported="false" />
-        <activity android:name=".ui.main.AuthenticationSuccessActivity"
+        <activity android:name=".ui.main.AuthenticationSuccessActivity"/>
         <activity android:name=".ui.main.SignUpActivity"
             android:exported="false"/>
 
