--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -3,21 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".IAApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.IdeaArchiveAndroid"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31"
-        android:enableOnBackInvokedCallback="true"
-        >
+        tools:targetApi="31">
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
@@ -28,11 +27,14 @@
             </intent-filter>
 
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:host="oauth"
-                    android:scheme="736c8c9c3716a1d7c8ebfb9d3f8ba5b2"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao736c8c9c3716a1d7c8ebfb9d3f8ba5b2" />
             </intent-filter>
 
             <intent-filter>
@@ -65,8 +67,8 @@
             android:exported="false" />
         <activity android:name=".ui.main.AuthenticationSuccessActivity"
             android:exported="false"/>
+
         <activity android:name=".ui.main.AuthenticationFailedActivity"
-            android:exported="false"/>
 
         <service
             android:name="com.google.android.gms.metadata.ModuleDependencies"
