글 작성 페이지 퍼블리싱

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -68,7 +68,9 @@
         <activity android:name=".ui.main.AuthenticationSuccessActivity"
             android:exported="false"/>
 
-        <activity android:name=".ui.main.AuthenticationFailedActivity"
+        <activity android:name=".ui.main.AuthenticationFailedActivity"/>
+
+
 
         <service
             android:name="com.google.android.gms.metadata.ModuleDependencies"
