--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false"/>
-        <activity android:name=".ui.main.SignUpActivity"
+        <activity android:name=".ui.signup.SignUpActivity"
             android:exported="false"/>
         <activity
             android:name=".ui.profile.EditProfileActivity"
@@ -66,9 +66,9 @@
         <activity
             android:name=".ui.profile.WithdrawalActivity"
             android:exported="false" />
-        <activity android:name=".ui.main.AuthenticationSuccessActivity"
+        <activity android:name=".ui.signup.AuthenticationSuccessActivity"
             android:exported="false"/>
-        <activity android:name=".ui.main.AuthenticationFailedActivity"
+        <activity android:name=".ui.signup.AuthenticationFailedActivity"
             android:exported="false"/>
         <activity android:name=".ui.write.WriteActivity"
             android:exported="false"/>
